[gd_scene load_steps=6 format=2]

[ext_resource path="res://Game/PlayButton.gd" type="Script" id=1]
[ext_resource path="res://Game/UI.gd" type="Script" id=2]
[ext_resource path="res://Game/PlayerPanel.tscn" type="PackedScene" id=3]

[sub_resource type="BitmapFont" id=2]

[sub_resource type="Theme" id=1]
default_font = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
margin_right = 1240.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 16.0

[node name="LeftSideInfo" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_right = 233.0
margin_bottom = 600.0
size_flags_horizontal = 11
size_flags_vertical = 3

[node name="P1Panel" parent="UI/HBoxContainer/LeftSideInfo" instance=ExtResource( 3 )]

[node name="P2Panel" parent="UI/HBoxContainer/LeftSideInfo" instance=ExtResource( 3 )]
margin_top = 302.0
margin_bottom = 600.0

[node name="TimeControls" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 237.0
margin_right = 296.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="Panel" type="Panel" parent="UI/HBoxContainer/TimeControls"]
margin_right = 59.0
margin_bottom = 54.0
size_flags_vertical = 3
size_flags_stretch_ratio = 7.0
theme = SubResource( 1 )

[node name="Label" type="Label" parent="UI/HBoxContainer/TimeControls/Panel"]
margin_top = 4.0
margin_right = 59.0
margin_bottom = 65.0
size_flags_vertical = 7
size_flags_stretch_ratio = 8.0
text = "Turn 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="UI/HBoxContainer/TimeControls"]
margin_top = 58.0
margin_right = 59.0
margin_bottom = 78.0
size_flags_horizontal = 3

[node name="PlayButton" type="Button" parent="UI/HBoxContainer/TimeControls"]
margin_top = 82.0
margin_right = 59.0
margin_bottom = 102.0
size_flags_horizontal = 3
size_flags_vertical = 3
toggle_mode = true
pressed = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForwardButton" type="Button" parent="UI/HBoxContainer/TimeControls"]
margin_top = 106.0
margin_right = 59.0
margin_bottom = 126.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Timeline" type="VSlider" parent="UI/HBoxContainer/TimeControls"]
margin_top = 130.0
margin_right = 59.0
margin_bottom = 600.0
size_flags_horizontal = 1
size_flags_vertical = 3
size_flags_stretch_ratio = 60.0

[node name="GameBoardPos" type="HBoxContainer" parent="UI/HBoxContainer"]
margin_left = 300.0
margin_right = 1002.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="RightSideInfo" type="VBoxContainer" parent="UI/HBoxContainer"]
margin_left = 1006.0
margin_right = 1240.0
margin_bottom = 600.0
size_flags_horizontal = 11
size_flags_vertical = 3

[node name="P3Panel" parent="UI/HBoxContainer/RightSideInfo" instance=ExtResource( 3 )]
margin_right = 234.0

[node name="P4Panel" parent="UI/HBoxContainer/RightSideInfo" instance=ExtResource( 3 )]
margin_top = 302.0
margin_right = 234.0
margin_bottom = 600.0

[connection signal="pressed" from="UI/HBoxContainer/TimeControls/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="toggled" from="UI/HBoxContainer/TimeControls/PlayButton" to="." method="_on_PlayButton_toggled"]
[connection signal="pressed" from="UI/HBoxContainer/TimeControls/ForwardButton" to="." method="_on_ForwardButton_pressed"]
[connection signal="gui_input" from="UI/HBoxContainer/TimeControls/Timeline" to="." method="_on_Timeline_gui_input"]
[connection signal="value_changed" from="UI/HBoxContainer/TimeControls/Timeline" to="." method="_on_Timeline_value_changed"]
